--- a/2. nodejs_1day/index.html
+++ b/2. nodejs_1day/index.html
@@ -6,14 +6,14 @@
         <title>Document</title>
         <!-- <script type="module" src="./main.js"></script> -->
         <!-- <script defer src="./main.js"></script> -->
-        <script src="./비동기.js"></script>
+        <script src="./main.js"></script>
     </head>
     <body>
-        <!-- <h1>node.js</h1>
+        <h1>node.js</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum beatae incidunt, aliquid ipsam vel quod minima
             accusantium laboriosam dolor tempora autem voluptatum ut modi in dolore ducimus consectetur tenetur. Quas.
         </p>
-        <button id="btn">clearInterval</button> -->
+        <button id="btn">clearInterval</button>
     </body>
 </html>
